--- a/Css/etat_vehicule.css
+++ b/Css/etat_vehicule.css
@@ -1,3 +1,7 @@
+#bg-etat-vehicule-client{ 
+  background-color: #A9CC34;
+}
+
 .container-data form.etat-vehicule{ 
     height:1500px;
     width: 380px;
