--- a/Css/contravention.css
+++ b/Css/contravention.css
@@ -1,3 +1,6 @@
+#bg-contra{ 
+   background-color: #A9CC34;
+}
 .contravention{ 
 
     background-color: #fff;
@@ -38,6 +41,10 @@
     text-align: center;
     margin-left: 40%;
     }
+    #bg-contra{ 
+      height: 680px;
+      height: 720px;
+   }
  }
  @media only screen and (min-width: 1200px){
     .contravention{
@@ -65,4 +72,7 @@
     text-align: center;
     margin-left: 35%;
     }
+    #bg-contra{ 
+      height: 720px;
+   }
  }
