--- a/Css/information_client.css
+++ b/Css/information_client.css
@@ -1,3 +1,7 @@
+ #information-client{ 
+    background-color: #A9CC34;
+ }
+ 
  /* infos client*/
  .container-data .infos-client{ 
     height: 800px;
